# tspydistributions

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: upload_pypi.yml  upload_test_pypi.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  density.rst  ged.md  ghst.md  ghyp.md  index.rst  introduction.rst  johnsonsu.md  location_scale.md  locscale.rst  normal.md  pdqr.rst  skewed_fernandez_steel.md  student.md
docs/source/_static/css/: custom.css
docs/source/auto_examples/: index.rst  plot_estimated.ipynb  plot_estimated.py.md5  plot_estimated.rst  plot_estimated_codeobj.pickle  plot_ghst.ipynb  plot_ghst.py.md5  plot_ghst.rst  plot_ghst_codeobj.pickle  plot_model.ipynb  plot_model.py.md5  plot_model.rst  plot_model_codeobj.pickle  plot_profile.ipynb  plot_profile.py  plot_profile.py.md5  plot_profile.rst  plot_profile_codeobj.pickle  sg_execution_times.rst
examples/: README.rst  plot_estimated.py  plot_ghst.py  plot_model.py  plot_profile.py
tests/: test_density.py  test_expectation.py  test_instance.py  test_pdqr.py
tspydistributions/: api.py  density.py  estimation.py  helpers.py  numderiv.py  pdqr.py  plot.py  profile.py  profiling.py  sandwich.py
