[tool.poetry]
name = "tspydistributions"
version = "0.1.1"
description = "Location Scale Family Statistical Distributions"
authors = ["Alexios Galanos <alexios@4dscape.com>"]
license = "MIT"
packages = [{include = "tspydistributions"}]
repository = "https://github.com/tsmodelspy/tspydistributions"
readme = ["README.md", "LICENSE"]
documentation = "https://tspydistributions.readthedocs.io/en/latest/"


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.25.2"
scipy = "^1.11.2"
tabulate = "^0.9.0"
plotnine = "^0.12.4"
torch = "^2.1.1"
numdifftools = "^0.9.41"
pandas = "^2.1.3"
setuptools = "^69.0.2"
jaxtyping = "^0.2.25"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinxcontrib-bibtex = "^2.6.1"
docutils = "^0.20.1"
wrapt = "^1.15.0"
myst-parser = "^2.0.0"
linkify-it-py = "^2.0.2"
cloud-sptheme = "^1.10.1.post20200504175005"
sphinx-rtd-theme = ">=1.0"
plotnine = "^0.12.4"
sphinx-gallery = "^0.14.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.pytest.ini_options]
pythonpath = [
  "tspydistributions"
]

[build-system]
requires = ["setuptools","poetry-core"]
build-backend = "poetry.core.masonry.api"
